contact,petition,action finished -footer

--- a/action.html
+++ b/action.html
@@ -34,14 +34,14 @@
         }
       h1, h2 {
         font-family: WickedGrit;
-        font-size: 40px;
+        font-size: 30px;
         }
       h3, h4, h5, h6 {
         font-family: Quicksand;
         font-weight: 600;
         font-size: 22px;
       }
-      p, span, li {
+      p{
         font-family: Quicksand;
         font-weight: 500;
         font-size: 20px;
@@ -100,7 +100,7 @@
   <div class="jumbotron cover-image">
     <img src="img/hero-crop2.jpg" class="img-fluid" alt="Responsive image">
     <div class="center">
-      <p>Take Action Now!</p>
+      <p>Take Action Now</p>
       <p>Your signature can go a long way!</p>
       </p>
       
@@ -134,9 +134,9 @@
   </div>
 
   <div class="row row-content align-items-center">
-    <div class="col-sm-4 col-md-3">
+    <div class="col-sm-4 col-md-8">
         <h3>Join Facebook Group</h3>
-        <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+        <p>We have created a Facebook group - Pups in Public, to keep people informed about progress for lobbying for our legislation. You can click the button below to follow the link to Facebook to join our group! (You must currently be a user of Facebook and sign-in)</p>
     </div>
     <div class="col">
         <div class="media">
@@ -170,9 +170,9 @@
 
     <h2 class="text-center mt-5">How your donations will help:</h2>
     <ul class="text-center mt-3 mb-3 text-justify">
-    <li class="py-1">- Cover web hosting costs</li>
-    <li class="py-1">- The rest will be given to Chris Rock of RockPit Brewing to help offset costs while lobbying</li>
-    <li class="py-1">- All excess donations that are not needed after these two purposes will be forwarded to <a href="https://animaladvocatesfl.org/" target="_blank">Animal Advocates Florida</a></li>
+    <li class="py-1"><p>- Cover web hosting costs</p></li>
+    <li class="py-1"><p>- The rest will be given to Chris Rock of RockPit Brewing to help offset costs while lobbying</p></li>
+    <li class="py-1"><p>- All excess donations that are not needed after these two purposes will be forwarded to <a href="https://animaladvocatesfl.org/" target="_blank">Animal Advocates Florida</p></a></li>
   </ul>
   <h3 class="text-center mt-1">What your donations won’t be used for:</h3>
   <ul class="text-center mt-2 mb-3 text-justify">
