--- a/petition.html
+++ b/petition.html
@@ -34,7 +34,7 @@
         }
       h1, h2 {
         font-family: WickedGrit;
-        font-size: 24px;
+        font-size: 30px;
         }
       h3, h4, h5, h6 {
         font-family: Quicksand;
@@ -100,12 +100,28 @@
   <div class="jumbotron cover-image">
     <img src="img/hero-crop2.jpg" class="img-fluid" alt="Responsive image">
     <div class="center">
-      <p>Join the fight to help our four legged friends join us in breweries.</p>
-      <p>Your signature can go a long way!</p>
+      <p>Sign the Petition</p>
+      <p>Definitely the best way to make an impact!
       </p>
       
-      <a href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries"><button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button></a>
+      <a href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button></a>
     </div>
+  </div>
+  <div class="container" >
+    
+    <h2 class="text-center mt-4">Why You Should Sign</h2>
+    <p class="text-center mt-3 mb-5 text-justify">They're man's best friend.  The most beloved of pets and possibly the sweetest and kindest of animals is not allowed to be with their owners at public establishments.  Many people love their dogs and can’t be apart from them.  They want to do everything with them.  Laws are currently preventing them from enjoying these special moments with their dogs that they would greatly love and appreciate.  There is a poorly conceived view held by some as dogd being a nuisance and a problem when they are allowed at or around these establishments and that view is poorly contrived and misconceived.  This is an injustice not only to the owners of the banned dogs but to the dogs themselves who only desire to be with their owners and would be excited at the idea of interacting with the many different people that enter these establishments.</p>
+  
+    <h3 class="text-center mt-4">Lets Change This Together!</h3>
+    <p class="text-center mt-3 mb-5 text-justify">We’d like to give the owners and the guests/customers of these establishments the option of interacting with dogs there.  Our goal is to reach out to as many people as we can and spread awareness not only of the problem that is currently affecting many people and their dogs but to lead them towards an existing solution.  Anyone who is as passionate as we are about dogs and that wants dogs to be given the right to enter these establishments with their owners will need to know about a petition that is working to rectify this currently existing problem.  We believe dogs have the power to brighten people’s lives and bring happiness to those who are sad and we want dogs to have the opportunity to do that from anywhere not just from within a home.  For now, we’re starting with breweries but we’d like to expand the reach of our advocacy to extend beyond just breweries and to cover many other types of establishments as well.   Details about the aforementioned petition are below.</p>
+    <h3 class="text-center mt-4">It takes only 2 minutes</h3>
+    <p class="text-center mt-3 mb-5 text-justify">You can show your best support simply by signing the petition, which will be sent to Florida legislators to help convince them to sway to our side when it comes time to present our appeal to the board. 
+      Your information will not be shared by signing, and no further mail will be sent regarding any additional action to be taken by you, but if you are interested in keeping up with progress of the petition it only takes 5 seconds to join our Facebook group - Pups in Public!
+      </p>
+  </div>
+  <div class="mb-4 text-center">
+    <a class="sign-link" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton2 cover-btn btn">SIGN PETITION</button></a>
+    <a class="sign-link" href="https://www.facebook.com/groups/494996907843289/" target="_blank"><button type="button" class="myButton btn-primary cover-btn btn">JOIN FACEBOOK GROUP</button></a>
   </div>
   </body>
 </html>
