--- a/index.html
+++ b/index.html
@@ -36,6 +36,26 @@
         font-family: WickedGrit;
         font-size: 24px;
         }
+      h3, h4, h5, h6 {
+        font-family: Quicksand;
+        font-weight: 600;
+        font-size: 22px;
+      }
+      p{
+        font-family: Quicksand;
+        font-weight: 500;
+        font-size: 20px;
+        color: black;
+      }
+      .fa, .fab {
+        color: #FEDE69;
+      }
+      nav {
+        min-width: 100%;
+      }
+      .active {
+        text-decoration: underline;
+      }
       
     </style>
   </head>
