added footer, icons on contact, updated styles

--- a/contact.html
+++ b/contact.html
@@ -80,16 +80,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav offset-lg-5 offset-md-1 offset-sm-1">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Our Cause</a>
+          <a class="nav-link custom-link" href="index.html">Our Cause</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="action.html">Take Action</a>
+          <a class="nav-link custom-link" href="action.html">Take Action</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="petition.html">Sign the Petition</a>
+          <a class="nav-link custom-link" href="petition.html">Sign the Petition</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Find Us <span class="sr-only">(current)</span></a>
+          <a class="nav-link custom-link" href="#">Find Us <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
@@ -116,6 +116,9 @@
            <div class="container-fluid second-section w-60">
             <h1 class="mb-4 text-center">Connect With Us</h1>
             <p class="text-center content mb-4 ">Here is a list of all of our social media.  Feel free to take a peek if you're curious to find out more about what it is we do and want to keep up to date with the latest news on the progress we’ve made towards realizing our advocacy’s goals.<br/>
+              <a href="https://twitter.com"><i class="fa fa-twitter-square mt-5" style="font-size:55px;color:#2E2E2D!important;"></i></a>
+              <a href="https://instagram.com"><i class="fa fa-instagram mt-5" style="font-size:55px;padding: 0 3%;color:#2E2E2D!important;"></i></a>
+              <a href="https://facebook.com"><i class="fa fa-facebook-square mt-5" style="font-size:55px;color:#2E2E2D!important;"></i></a>
             </div>
 
 
@@ -146,6 +149,23 @@
 
       </div>
         </div>
+        <footer>
+          <div class="row text-center">
+            <div class="col-lg-4">
 
+            </div>
+            <div class="col-lg-4 icons">
+              <p class="footer-text">Connect With Us On Social Media!</p>
+             <a href="https://twitter.com"><i class="fa fa-twitter-square footer-icon" style="font-size:24px;"></i></a>
+             <a href="https://instagram.com"><i class="fa fa-instagram footer-icon" style="font-size:24px;padding: 0 3%;"></i></a>
+             <a href="https://facebook.com"><i class="fa fa-facebook-square footer-icon" style="font-size:24px;"></i></a>
+             <p class="group-members"> (DIG4172C) Leidy, Stephen, Anthony, Erickson, Tyler</p>
+           </div>
+      
+           <div class="col-lg-4">
+
+           </div>
+          </div>
+        </footer>
   </body>
 </html>
