--- a/petition.html
+++ b/petition.html
@@ -80,16 +80,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav offset-lg-5 offset-md-1 offset-sm-1">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Our Cause</a>
+        <a class="nav-link custom-link" href="index.html">Our Cause</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="action.html">Take Action</a>
+        <a class="nav-link custom-link" href="action.html">Take Action</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Sign the Petition <span class="sr-only">(current)</span></a>
+        <a class="nav-link custom-link" href="#">Sign the Petition <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Find Us</a>
+        <a class="nav-link custom-link" href="contact.html">Find Us</a>
       </li>
     </ul>
   </div>
@@ -100,8 +100,8 @@
   <div class="jumbotron cover-image">
     <img src="img/hero-crop2.jpg" class="img-fluid" alt="Responsive image">
     <div class="center">
-      <p>Sign the Petition</p>
-      <p>Definitely the best way to make an impact!
+      <p style="text-transform: uppercase;">Sign the Petition</p>
+      <p style="text-transform: uppercase;">Definitely the best way to make an impact!
       </p>
       
       
@@ -123,5 +123,23 @@
     <a class="sign-link" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton2 cover-btn btn">SIGN PETITION</button></a>
     <a class="sign-link" href="https://www.facebook.com/groups/494996907843289/" target="_blank"><button type="button" class="myButton btn-primary cover-btn btn">JOIN FACEBOOK GROUP</button></a>
   </div>
+  <footer>
+    <div class="row text-center">
+      <div class="col-lg-4">
+
+      </div>
+      <div class="col-lg-4 icons">
+        <p class="footer-text">Connect With Us On Social Media!</p>
+       <a href="https://twitter.com"><i class="fa fa-twitter-square footer-icon" style="font-size:24px;"></i></a>
+       <a href="https://instagram.com"><i class="fa fa-instagram footer-icon" style="font-size:24px;padding: 0 3%;"></i></a>
+       <a href="https://facebook.com"><i class="fa fa-facebook-square footer-icon" style="font-size:24px;"></i></a>
+       <p class="group-members"> (DIG4172C) Leidy, Stephen, Anthony, Erickson, Tyler</p>
+     </div>
+
+     <div class="col-lg-4">
+
+     </div>
+    </div>
+  </footer>
   </body>
 </html>
