--- a/action.html
+++ b/action.html
@@ -80,16 +80,16 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav offset-lg-5 offset-md-1 offset-sm-1">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Our Cause </a>
+        <a class="nav-link custom-link" href="index.html">Our Cause </a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#"><span class="sr-only">(current)</span>Take Action</a>
+        <a class="nav-link custom-link" href="#"><span class="sr-only">(current)</span>Take Action</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="petition.html">Sign the Petition</a>
+        <a class="nav-link custom-link" href="petition.html">Sign the Petition</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Find Us</a>
+        <a class="nav-link custom-link" href="contact.html">Find Us</a>
       </li>
     </ul>
   </div>
@@ -100,8 +100,8 @@
   <div class="jumbotron cover-image">
     <img src="img/hero-crop2.jpg" class="img-fluid" alt="Responsive image">
     <div class="center">
-      <p>Take Action Now</p>
-      <p>Your signature can go a long way!</p>
+      <p style="text-transform: uppercase;">Take Action Now</p>
+      <p style="text-transform: uppercase;">Your signature can go a long way!</p>
       </p>
       
       
@@ -182,5 +182,23 @@
 <div class="mb-5 text-center">
   <a class="sign-link" href="#" target="_blank"><button type="button" class="myButton2 cover-btn btn">DONATE NOW!</button></a>
 </div>
+<footer>
+  <div class="row text-center">
+    <div class="col-lg-4">
+
+    </div>
+    <div class="col-lg-4 icons">
+      <p class="footer-text">Connect With Us On Social Media!</p>
+     <a href="https://twitter.com"><i class="fa fa-twitter-square footer-icon" style="font-size:24px;"></i></a>
+     <a href="https://instagram.com"><i class="fa fa-instagram footer-icon" style="font-size:24px;padding: 0 3%;"></i></a>
+     <a href="https://facebook.com"><i class="fa fa-facebook-square footer-icon" style="font-size:24px;"></i></a>
+     <p class="group-members"> (DIG4172C) Leidy, Stephen, Anthony, Erickson, Tyler</p>
+   </div>
+
+   <div class="col-lg-4">
+
+   </div>
+  </div>
+</footer>
   </body>
   </html>
