--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <style>
       body {
         width: 100%;
-        margin: auto;
+        margin: 0;
         font-family: Quicksand;
+        overflow-x: hidden;
       }
       @font-face {
         font-family: WickedGrit;
@@ -247,12 +248,4 @@
            </footer>
  
   </body>
-
-  <script>
-    $(".grid").imagesLoaded(function() {
-        $(".grid").masonry({
-          itemSelector: ".grid-item"
-        });
-      });
-    </script>
 </html>
