fixed link in hero image

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <img src="img/hero-crop2.jpg" class="img-fluid" alt="Responsive image">
     <div class="center">
       <p style="text-transform: uppercase;">Join the fight to help our four legged friends join us in breweries.</p>
-
+      <a class="sign-link" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton btn-primary cover-btn btn">SIGN PETITION</button></a>
       </p>
       
-      <button type="button" class="myButton btn-primary cover-btn btn">SIGN PETITION</button>
+     
     </div>
   </div>
    <!--ADDING ABOUT US SECTION-->
