linked facebook back to fb group

--- a/action.html
+++ b/action.html
@@ -191,7 +191,7 @@
       <p class="footer-text">Connect With Us On Social Media!</p>
      <a href="https://twitter.com"><i class="fa fa-twitter-square footer-icon" style="font-size:24px;"></i></a>
      <a href="https://instagram.com"><i class="fa fa-instagram footer-icon" style="font-size:24px;padding: 0 3%;"></i></a>
-     <a href="https://facebook.com"><i class="fa fa-facebook-square footer-icon" style="font-size:24px;"></i></a>
+     <a target="_blank"href="https://www.facebook.com/groups/494996907843289/"><i class="fa fa-facebook-square footer-icon" style="font-size:24px;"></i></a>
      <p class="group-members"> (DIG4172C) Leidy, Stephen, Anthony, Erickson, Tyler</p>
    </div>
 
