--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p style="font-size: 16px; color: white; float: left;"><a class="sign-link" target="_blank" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries">Sign The Petition -></a></p>
         <a href="https://twitter.com"><i class="fa fa-twitter-square" style="float: right;">&nbsp;&nbsp;</i></a>
         <a href="https://instagram.com"><i class="fa fa-instagram" style="float: right;">&nbsp;&nbsp;</i></a>&nbsp;&nbsp;
-        <a href="https://facebook.com"><i class="fa fa-facebook-square" style="float: right;">&nbsp;&nbsp;</i></a>
+        <a href="https://www.facebook.com/groups/494996907843289/"><i class="fa fa-facebook-square" style="float: right;">&nbsp;&nbsp;</i></a>
       </div>
               
   <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
@@ -234,12 +234,12 @@
 
                </div>
                <div class="col-lg-4 icons">
-                 <p class="footer-text">Connect With Us On Social Media!</p>
-                <a href="https://twitter.com"><i class="fa fa-twitter-square footer-icon" style="font-size:24px;"></i></a>
-                <a href="https://instagram.com"><i class="fa fa-instagram footer-icon" style="font-size:24px;padding: 0 3%;"></i></a>
-                <a href="https://facebook.com"><i class="fa fa-facebook-square footer-icon" style="font-size:24px;"></i></a>
-                <p class="group-members"> (DIG4172C) Leidy, Stephen, Anthony, Erickson, Tyler</p>
-              </div>
+                <p class="footer-text">Connect With Us On Social Media!</p>
+               <a href="https://twitter.com"><i class="fa fa-twitter-square footer-icon" style="font-size:24px;"></i></a>
+               <a href="https://instagram.com"><i class="fa fa-instagram footer-icon" style="font-size:24px;padding: 0 3%;"></i></a>
+               <a target="_blank"href="https://www.facebook.com/groups/494996907843289/"><i class="fa fa-facebook-square footer-icon" style="font-size:24px;"></i></a>
+               <p class="group-members"> (DIG4172C) Leidy, Stephen, Anthony, Erickson, Tyler</p>
+             </div>
          
               <div class="col-lg-4">
 
