added line height, margin, bold headings

--- a/action.html
+++ b/action.html
@@ -42,12 +42,19 @@
         font-weight: 600;
         font-size: 22px;
       }
+      .section-head{
+        margin-bottom: 2%;
+        font-weight: bold;
+      }
       p{
         font-family: Quicksand;
         font-weight: 500;
         font-size: 20px;
         color: black;
       }
+       .para{
+         line-height: 2.3rem;
+       }
       .fa, .fab {
         color: #FEDE69;
       }
@@ -111,12 +118,12 @@
   <div class="container" >
     
     <h2 class="text-center mt-4">How You Can Help</h2>
-    <p class="text-center mt-3 mb-5 text-justify">If you have made it this far, it seems you are also passionate about this issue that we are facing. And luckily, there are some very easy ways you can help.</p>
+    <p class="para text-center mt-3 mb-5 text-justify">If you have made it this far, it seems you are also passionate about this issue that we are facing. And luckily, there are some very easy ways you can help.</p>
 
     <div class="row row-content align-items-center my-2">
         <div class="col-sm-6 order-sm-last col-md-8"> 
-          <h3 class="mb-2">Sign Petition</h3>
-          <p>If nothing else, there is a petition currently on Change.org to allow pets in Florida breweries. You can show your support simply by signing the petition, which will be sent to Florida legislators to help convince them to sway to our side when it comes time to present our appeal to the board.
+          <h3 class="mb-2 section-head">Sign Petition</h3>
+          <p class="para">If nothing else, there is a petition currently on Change.org to allow pets in Florida breweries. You can show your support simply by signing the petition, which will be sent to Florida legislators to help convince them to sway to our side when it comes time to present our appeal to the board.
             Your information will not be shared by signing, and no further mail will be sent regarding any additional action to be taken by you, but if you are interested in keeping up with the progress of the petition it only takes 5 seconds to join our Facebook group - Pups in Public!
             </p>
         </div>
@@ -136,8 +143,8 @@
 
   <div class="row row-content align-items-center">
     <div class="col-sm-4 col-md-8">
-        <h3>Join Facebook Group</h3>
-        <p>We have created a Facebook group - Pups in Public, to keep people informed about progress for lobbying for our legislation. You can click the button below to follow the link to Facebook to join our group! (You must currently be a user of Facebook and sign-in)</p>
+        <h3 class="section-head">Join Facebook Group</h3>
+        <p class="para">We have created a Facebook group - Pups in Public, to keep people informed about progress for lobbying for our legislation. You can click the button below to follow the link to Facebook to join our group! (You must currently be a user of Facebook and sign-in)</p>
     </div>
     <div class="col">
         <div class="media">
@@ -155,8 +162,8 @@
 
     <div class="row row-content align-items-center">
       <div class="col-sm-6 order-sm-last col-md-8"> 
-        <h3>Donations</h3>
-        <p>We are also taking donations through Paypal to help us fight our cause!
+        <h3 class="section-head">Donations</h3>
+        <p class="para">We are also taking donations through Paypal to help us fight our cause!
           We will be entirely upfront with how your donations are being utilized at all times.
           </p>
       </div>
@@ -177,7 +184,7 @@
   </ul>
   <h3 class="text-center mt-1">What your donations won’t be used for:</h3>
   <ul class="text-center mt-2 mb-3 text-justify">
-    <li class="py-1">- To help profit any business. RockPit has amazing beers and is doing a fantastic job in the Orlando marketplace. They don’t need this money to help keep them afloat, just travel and time expenses.</li>
+    <li class="para py-1">- To help profit any business. RockPit has amazing beers and is doing a fantastic job in the Orlando marketplace. They don’t need this money to help keep them afloat, just travel and time expenses.</li>
   </ul>
 </div>
 <div class="mb-5 text-center">
