--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,9 @@
         font-weight: 600;
         font-size: 22px;
       }
+      .para{
+        line-height: 2.3rem;;
+      }
       p, span {
         font-family: Quicksand;
         font-weight: 500;
@@ -116,7 +119,7 @@
 
            <div class="container-fluid second-section w-60">
             <h1 class="mb-4 text-center">Connect With Us</h1>
-            <p class="text-center content mb-4 ">Here is a list of all of our social media.  Feel free to take a peek if you're curious to find out more about what it is we do and want to keep up to date with the latest news on the progress we’ve made towards realizing our advocacy’s goals.<br/>
+            <p class="para text-center content mb-4 ">Here is a list of all of our social media.  Feel free to take a peek if you're curious to find out more about what it is we do and want to keep up to date with the latest news on the progress we’ve made towards realizing our advocacy’s goals.<br/>
               <a href="https://twitter.com"><i class="fa fa-twitter-square mt-5" style="font-size:55px;color:#2E2E2D!important;"></i></a>
               <a href="https://instagram.com"><i class="fa fa-instagram mt-5" style="font-size:55px;padding: 0 3%;color:#2E2E2D!important;"></i></a>
               <a href="https://facebook.com"><i class="fa fa-facebook-square mt-5" style="font-size:55px;color:#2E2E2D!important;"></i></a>
