added a disclaimer and changed logo size

--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,20 @@
       .active {
         text-decoration: underline;
       }
+      .disclaimer{
+  font-size: 10px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  font-weight: bold;
+  margin-top: 3%;
+  color: white;
+  line-height: 1rem;
+}
+      @media screen and (max-width: 600px) {
+        .logo-img{
+          width: 30%!important;
+        }
+}
     </style>
   </head>
     <body>
@@ -74,7 +88,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
       <div class="nav-components">
         <a class="navbar-brand" href="index.html">
-          <img class="logo-img" src="img/logo-y.png" width="17%" height="17%" />
+          <img class="logo-img" src="img/logo-y.png" width="20%" height="20%" />
         </a>
         <button class="navbar-toggler offset-10 align-self-center" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -164,6 +178,7 @@
              <a href="https://instagram.com"><i class="fa fa-instagram footer-icon" style="font-size:24px;padding: 0 3%;"></i></a>
              <a target="_blank"href="https://www.facebook.com/groups/494996907843289/"><i class="fa fa-facebook-square footer-icon" style="font-size:24px;"></i></a>
              <p class="group-members"> (DIG4172C) Leidy, Stephen, Anthony, Erickson, Tyler</p>
+             <p class="disclaimer"><strong>Disclaimer:</strong> This is not a real site and has been created for a University Level Course</p>
            </div>
       
            <div class="col-lg-4">
