changed padding for mobile breakpoint

--- a/index.html
+++ b/index.html
@@ -64,13 +64,19 @@
           width: 30%!important;
         }
         .disclaimer{
-  font-size: 8px;
-  text-transform: uppercase;
-  text-decoration: underline;
-  font-weight: bold;
-  margin-top: 3%;
-  color: white;
-text-align: center;
+          font-size: 8px;
+          text-transform: uppercase;
+          text-decoration: underline;
+          font-weight: bold;
+          margin-top: 3%;
+          color: white;
+          text-align: center;
+}
+.second-section{
+    padding-left: 0!important;
+    padding-right: 0!important;
+    padding-top: 7%!important;
+    padding-bottom: 0!important;
 }
 }
       
